opam-version: "2.0"
name: "mirage-vnetif"
maintainer: "Magnus Skjegstad <magnus@skjegstad.com>"
authors: "Magnus Skjegstad <magnus@skjegstad.com>"
homepage: "https://github.com/mirage/mirage-vnetif"
bug-reports: "https://github.com/mirage/mirage-vnetif/issues/"
dev-repo: "git+https://github.com/mirage/mirage-vnetif.git"
doc: "https://mirage.github.io/mirage-vnetif/"
license: "ISC"

build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "ocaml" {>= "4.06.0"}
  "dune"  {>= "1.9"}
  "result" {>= "1.5"}
  "lwt"
  "mirage-net" {>= "3.0.0"}
  "cstruct" {>="6.0.0"}
  "ipaddr" {>= "3.0.0"}
  "macaddr"
  "mirage-profile"
  "duration"
  "logs"
]
tags: ["org:mirage"]
synopsis: "Virtual network interface and software switch for Mirage"
description: """
Provides the module `Vnetif` which can be used as a replacement for the regular
`Netif` implementation in Xen and Unix. Stacks built using `Vnetif` are
connected to a software switch that allows the stacks to communicate as if they
were connected to the same LAN.
"""
